manifests/kubeci-engine-0.1.0.tgz-manifest.yaml
---
# Source: kubeci-engine/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-kubeci-engine
  namespace: default
  labels:
    app: "kubeci-engine"
    chart: "kubeci-engine-0.1.0"
    release: "my-release"
    heritage: "Helm"
spec:
  ports:
  # Port used to expose admission webhook apiserver
  - name: admission
    port: 443
    targetPort: 8443
  selector:
    app: "kubeci-engine"
    release: "my-release"
---
# Source: kubeci-engine/templates/deployment.yaml
# GKE returns Major:"1", Minor:"10+"
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-kubeci-engine
  namespace: default
  labels:
    chart: "kubeci-engine-0.1.0"
    app: "kubeci-engine"
    heritage: "Helm"
    release: "my-release"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "kubeci-engine"
      release: "my-release"
  template:
    metadata:
      labels:
        app: "kubeci-engine"
        release: "my-release"
    spec:
      serviceAccountName: my-release-kubeci-engine
      containers:
      - name: operator
        image: kubeci/kubeci-engine:0.1.0
        imagePullPolicy: IfNotPresent
        args:
        - run
        - --v=3
        - --rbac=true
        - --docker-registry=kubeci
        - --secure-port=8443
        - --audit-log-path=-
        - --tls-cert-file=/var/serving-cert/tls.crt
        - --tls-private-key-file=/var/serving-cert/tls.key
        - --enable-status-subresource=true
        - --enable-analytics=true
        ports:
        - containerPort: 8443
        resources:
          requests:
            cpu: "100m"
        volumeMounts:
        - mountPath: /var/serving-cert
          name: serving-cert
      - name: web-ui
        image: kubeci/kubeci-engine:0.1.0
        imagePullPolicy: IfNotPresent
        args:
        - workplan-viewer
        ports:
        - containerPort: 9090
        resources:
          requests:
            cpu: "100m"
      volumes:
      - name: serving-cert
        secret:
          defaultMode: 420
          secretName: my-release-kubeci-engine-apiserver-cert
---
# Source: kubeci-engine/templates/mutating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: mutators.engine.kube.ci
  labels:
    chart: "kubeci-engine-0.1.0"
    app: "kubeci-engine"
    heritage: "Helm"
    release: "my-release"
  annotations:
    "helm.sh/hook": post-install,post-upgrade
    "helm.sh/hook-delete-policy": before-hook-creation
webhooks:
- name: workflow.mutators.engine.kube.ci
  clientConfig:
    service:
      namespace: default
      name: kubernetes
      path: /apis/mutators.engine.kube.ci/v1alpha1/workflows
    caBundle: bm90LWNhLWNlcnQ=
  rules:
  - operations:
    - CREATE
    - UPDATE
    apiGroups:
    - engine.kube.ci
    apiVersions:
    - "*"
    resources:
    - workflows
  failurePolicy: Fail
---
# Source: kubeci-engine/templates/validating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: validators.engine.kube.ci
  labels:
    chart: "kubeci-engine-0.1.0"
    app: "kubeci-engine"
    heritage: "Helm"
    release: "my-release"
  annotations:
    "helm.sh/hook": post-install,post-upgrade
    "helm.sh/hook-delete-policy": before-hook-creation
webhooks:
- name: workflow.validators.engine.kube.ci
  clientConfig:
    service:
      namespace: default
      name: kubernetes
      path: /apis/validators.engine.kube.ci/v1alpha1/workflows
    caBundle: bm90LWNhLWNlcnQ=
  rules:
  - operations:
    - CREATE
    - UPDATE
    apiGroups:
    - engine.kube.ci
    apiVersions:
    - "*"
    resources:
    - workflows
  failurePolicy: Fail
- name: workplan.validators.engine.kube.ci
  clientConfig:
    service:
      namespace: default
      name: kubernetes
      path: /apis/validators.engine.kube.ci/v1alpha1/workplans
    caBundle: bm90LWNhLWNlcnQ=
  rules:
  - operations:
    - UPDATE
    apiGroups:
    - engine.kube.ci
    apiVersions:
    - "*"
    resources:
    - workplans
  failurePolicy: Fail
